--- a/backend/pages/templates/socialaccount/snippets/provider_list.html
+++ b/backend/pages/templates/socialaccount/snippets/provider_list.html
@@ -3,18 +3,31 @@
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
-{% if provider.id == "openid" %}
-{% for brand in provider.get_brands %}
-<div>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
-</div>
-{% endfor %}
-{% endif %}
-<div>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</div>
+  {% if provider.id == "openid" %}
+    {% for brand in provider.get_brands %}
+      <div>
+        <a title="{{brand.name}}"
+          class="socialaccount_provider {{provider.id}} {{brand.id}}"
+          href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
+          >{{brand.name}}</a>
+      </div>
+    {% endfor %}
+  {% endif %}
+  <div class="socialaccount_provider {{provider.id}}" >
+    <a title="{{provider.name}}"
+      href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+        {% if provider.id == "google" %}
+        <div class="google-icon-wrapper">
+          <img class="google-icon" src="/static/img/google-g-logo.svg"/>
+        </div>
+        {% endif %}
+        {% if provider.id == "facebook" %}
+        <div class="facebook-icon-wrapper">
+          <img class="facebook-icon" src="/static/img/facebook-logo.svg"/>
+        </div>
+        {% endif %}
+        <span class="btn-text">Sign in with {{provider.name}}</span>
+
+      </a>
+  </div>
 {% endfor %}
