--- a/backend/pages/templates/styles.css
+++ b/backend/pages/templates/styles.css
@@ -88,3 +88,85 @@ input {
     font-weight: bold;
     color: #113b65;
 }
+
+
+/* Social Buttons */
+
+/* Google */
+
+div.socialaccount_provider {
+    cursor: pointer;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+div.socialaccount_provider.google {
+    width: 184px;
+    height: 42px;
+    background-color: #4285f4;
+    border-radius: 2px;
+    box-shadow: 0 3px 4px 0 rgba(0,0,0,.25);
+}
+
+
+div.socialaccount_provider:hover {
+    box-shadow: 0 0 6px #4285f4;
+}
+
+div.socialaccount_provider:active {
+    background: #1669F2;
+}
+
+div.socialaccount_provider.google .google-icon-wrapper {
+    position: absolute;
+    margin: 1px 0 1px 1px;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+div.socialaccount_provider.google .google-icon {
+    padding-top: 10%;
+    height: 80%;
+}
+div.socialaccount_provider.google  .btn-text {
+    float: right;
+    margin: 11px 8px 0 0;
+    color: #fff;
+    font-size: 13px;
+    letter-spacing: 0.2px;
+    font-family: 'Roboto',arial,sans-serif;
+    font-weight: bold;
+}
+
+div.socialaccount_provider.facebook {
+    background-color: #4267b2;
+    border-radius: 4px;
+    color: #fff;
+    max-width: 272px;
+    min-width: initial;
+    width: 184px;
+    height: 42px;
+}
+
+div.socialaccount_provider.facebook .facebook-icon-wrapper {
+    position: absolute;
+    margin: 2px;
+    width: 40px;
+    height: 40px;
+}
+
+div.socialaccount_provider.facebook .facebook-icon {
+    width: 27px;
+    height: 37px;
+}
+
+div.socialaccount_provider.facebook .btn-text {
+    float: right;
+    margin: 12px 8px 0 0;
+    color: #fff;
+    font-size: 13px;
+    letter-spacing: 0.2px;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #fff;
+}
