--- a/backend/pages/templates/menu.html
+++ b/backend/pages/templates/menu.html
@@ -1,4 +1,6 @@
 
+<div>Welcome {{user.username}}</div>
+<br/>
 <div><h3>Menu</h3></div>
 {% if user.is_authenticated %}
   <div><a href="{% url 'account_email' %}">Change E-mail</a></div>
