Add Privacy Policy - In accordance with Facebook guidelines, a Privacy policy needed to be created - Fixed the main menu logic for signed in users

--- a/backend/pages/templates/home.html
+++ b/backend/pages/templates/home.html
@@ -13,5 +13,11 @@
         <br/>
         <a href="{% url 'account_login' %}"><span class="button primary" >Sign In</span></a>
         <a href="{% url 'account_signup' %}"><span class="button secondary" >Sign Up</span></a>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <div><a href="{% url 'dash' %}">Go to Dashboard Site</a></div>
     </div>
 {% endblock %}
