--- a/backend/pages/templates/menu.html
+++ b/backend/pages/templates/menu.html
@@ -7,6 +7,7 @@
   <div><a href="{% url 'account_email' %}">Change E-mail</a></div>
   <div><a href="{% url 'account_reset_password' %}">Change Password</a></div>
   <div><a href="{% url 'socialaccount_connections' %}">View Social Connectors</a></div>
+  <div><a href="{% url 'dash-config' %}">Configure Service Parameters</a></div>
   <div><a href="{% url 'privacy' %}">View Our Privacy Policy</a></div>
   <div><a href="{% url 'dash' %}">Go to Dashboard Site</a></div>
 {% endif %}
